--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,29 +28,40 @@ jobs:
       #   # It uses --rm to remove the container immediately after formatting.
       #   run: docker compose run --rm namenode hdfs namenode -format
 
-
-
       # --- Airflow Specific Setup and Checks ---
+      - name: Install cryptography package
+        run: pip install cryptography
 
       - name: Generate Airflow Fernet Key
         id: generate_fernet_key
-        run: echo "AIRFLOW_FERNET_KEY=$(python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")" >> $GITHUB_ENV
+        run: |
+          FERNET_KEY=$(python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
+          echo "AIRFLOW_FERNET_KEY=$FERNET_KEY" >> $GITHUB_ENV
+          echo "::add-mask::$FERNET_KEY"
 
-      - name: Get current user ID and set AIRFLOW_UID
+      - name: Generate Airflow Secret Key
+        id: generate_secret_key
+        run: |
+          SECRET_KEY=$(python -c "import secrets; print(secrets.token_urlsafe(32))")
+          echo "AIRFLOW_SECRET_KEY=$SECRET_KEY" >> $GITHUB_ENV
+          echo "::add-mask::$SECRET_KEY"
+
+      - name: Set AIRFLOW_UID for Docker
         id: set_airflow_uid
         run: |
-          echo "AIRFLOW_UID=$(id -u)" >> $GITHUB_ENV
-        shell: bash
+          # In GitHub Actions, we typically use a fixed UID that works well with Docker
+          echo "AIRFLOW_UID=50000" >> $GITHUB_ENV
 
-      - name: Verify AIRFLOW_UID (optional)
+      - name: Create required directories
         run: |
-          echo "AIRFLOW_UID is set to: $AIRFLOW_UID"
+          mkdir -p dags logs plugins
+          sudo chmod -R 777 dags logs plugins
 
       - name: Initialize Airflow Database and User
         run: |
           echo "Initializing Airflow database and creating admin user..."
           # The --profile init ensures only the init service runs for this step
-          docker compose --profile init up airflow-init
+          docker-compose --profile init up airflow-init --exit-code-from airflow-init
           echo "Airflow database initialized and admin user created."
         env:
           # Use a consistent UID for Airflow containers to avoid permission issues with mounted volumes
@@ -153,7 +164,6 @@ jobs:
               echo -n "."; sleep 5; \
             done' || { echo "HiveServer2 did not become healthy in time!"; exit 1; }
           echo "HiveServer2 is healthy."
-          
 
       ## Airflow Health Checks 🩺
 
